nrgljubljana_interface/2.2.x/_sources/cpp2rst_generated/nrgljubljana_interface/solver_core.rst.txt
..
   Generated automatically by cpp2rst

.. highlight:: c
.. role:: red
.. role:: green
.. role:: param


.. _nrgljubljana_interface__solver_core:

nrgljubljana_interface::solver_core
===================================

*#include <nrgljubljana_interface.hpp>*

.. rst-class:: cppsynopsis

      class  :red:`solver_core`

The Solver class


Public members
--------------

+-------------------+-----------------------------------------+--------------------------------------------------------+
| A_w               | std::optional<g_w_t>                    |  The spectral function                                 |
+-------------------+-----------------------------------------+--------------------------------------------------------+
| B_w               | std::optional<g_w_t>                    |  The spectral function of the auxiliary correlator F_w |
+-------------------+-----------------------------------------+--------------------------------------------------------+
| G_w               | std::optional<g_w_t>                    |  The retarded Greens function                          |
+-------------------+-----------------------------------------+--------------------------------------------------------+
| F_w               | std::optional<g_w_t>                    |  The auxiliary Green function F_w = Sigma_w * G_w      |
+-------------------+-----------------------------------------+--------------------------------------------------------+
| Sigma_w           | std::optional<g_w_t>                    |  The retarded Self energy                              |
+-------------------+-----------------------------------------+--------------------------------------------------------+
| expv              | std::map<std::string, double>           |  Expectation values of local impurity operators        |
+-------------------+-----------------------------------------+--------------------------------------------------------+
| chi_NN_w          | std::optional<g_w_t>                    |  Charge susceptibility                                 |
+-------------------+-----------------------------------------+--------------------------------------------------------+
| chi_SS_w          | std::optional<g_w_t>                    |  Spin susceptibility                                   |
+-------------------+-----------------------------------------+--------------------------------------------------------+
| constr_params     | nrgljubljana_interface::constr_params_t |                                                        |
+-------------------+-----------------------------------------+--------------------------------------------------------+
| nrg_params        | nrgljubljana_interface::nrg_params_t    |  Low-level NRG parameters                              |
+-------------------+-----------------------------------------+--------------------------------------------------------+
| last_solve_params | std::optional<solve_params_t>           |                                                        |
+-------------------+-----------------------------------------+--------------------------------------------------------+
| verbose           | bool                                    |                                                        |
+-------------------+-----------------------------------------+--------------------------------------------------------+
| gf_struct         | triqs::hilbert_space::gf_struct_t       |  The Green function structure object                   |
+-------------------+-----------------------------------------+--------------------------------------------------------+
| chi_struct        | triqs::hilbert_space::gf_struct_t       |  The susceptibility structure object                   |
+-------------------+-----------------------------------------+--------------------------------------------------------+
| log_mesh          | gf_mesh<triqs::gfs::refreq_pts>         |  Logarithmic mesh                                      |
+-------------------+-----------------------------------------+--------------------------------------------------------+
| Delta_w           | nrgljubljana_interface::g_w_t           |  The hybridization function in real frequencies        |
+-------------------+-----------------------------------------+--------------------------------------------------------+


Member functions
----------------

+-------------------------------------------------------------------------+--+
| :ref:`(constructor) <nrgljubljana_interface__solver_core__constructor>` |  |
+-------------------------------------------------------------------------+--+
| :ref:`solve <nrgljubljana_interface__solver_core__solve>`               |  |
+-------------------------------------------------------------------------+--+
| :ref:`readexpv <nrgljubljana_interface__solver_core__readexpv>`         |  |
+-------------------------------------------------------------------------+--+
| :ref:`readGF <nrgljubljana_interface__solver_core__readGF>`             |  |
+-------------------------------------------------------------------------+--+
| :ref:`readA <nrgljubljana_interface__solver_core__readA>`               |  |
+-------------------------------------------------------------------------+--+

.. toctree::
    :hidden:

    solver_core/constructor
    solver_core/solve
    solver_core/readexpv
    solver_core/readGF
    solver_core/readA